# traenslenzor

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  pyproject.toml  test_transform_integration.py  verify_todo_resolution.py
.configs/: README.md  alexnet_scratch.toml  alexnet_sweep.py  cli_test.toml  doc-classifier.toml  doc-scanner.toml  resnet50_finetune.toml  resnet50_sweep.toml  resnet_sweep.py  resnet_sweep.toml  supervisor.toml  tuning_alexnet.toml  tuning_vit.toml  vit_finetune.toml
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: ci.yml
.logs/checkpoints/: alexnet-epoch=15-val_loss=0.03.ckpt  alexnet-epoch=9-val-loss=0.67.ckpt  resnet50-epoch=5-val_loss=0.52.ckpt  vit_b_16-epoch=7-val_loss=0.83.ckpt
.zed/: tasks.json
_config/: alexnet_scratch.toml  cli_test.toml  resnet50_finetune.toml  resnet50_finetune_sweep_dataset.toml  resnet50_scratch.toml  tuning_alexnet.toml  vitb16_finetune_sweep_imagenet.toml
config/: doc-classifier.toml  doc-scanner.toml  supervisor.toml
docs/: TRANSFORM_INTEGRATION.md  text_item_lifecycle.md
docs/presentation/static/: notes.typ  themes.typ
docs/presentation/update-meeting/: 21-10-25.typ
docs/report/: appendix.typ  glossary.typ  main.typ  sources.bib  systems.md
docs/report/analysis/: optuna_stats.json  optuna_summary.json
docs/report/chapters/: 01_introduction.typ  01_introduction.typ.old  02_components.typ  02_document_scanning.typ  03_team.typ
docs/report/graphics/: adl-report.drawio  doc-classifier-config.mmd  doc-classifier-serving.mmd  streamlit-app-sequence.mmd
docs/report/template/: colors.typ  lib.typ  template_usage.typ
docs/update/: 01update.typ  02update.typ  03update.typ  template.typ
notebooks/: doc_classifier_01.ipynb  puml_config_example.ipynb  rvl_cdip_dataset_overview.ipynb
old_reference_files/: experiment_config.py  optuna.py  optuna_optimizable.py
src/: main.py
test_images/: scientific_publication_metadata.json  scientific_publication_session_details.csv
tests/: conftest.py  test_file_server.py  test_flatten_image.py  test_full_pipeline.py  test_image_inpainting.py  test_image_provider.py  test_image_renderer.py  test_image_renderer_integration.py  test_image_renderer_mcp.py  test_image_renderer_unit.py  test_image_utils.py  test_inpainter.py  test_onnx_inpainter.py  test_session_state_tools.py  test_supervisor_integration.py
tests/doc_classifier/: conftest.py  test_alexnet_backbone_spec.py  test_base_config.py  test_configs_and_utils.py  test_confusion_matrix_logging.py  test_console_logger_integration.py  test_custom_progress_bars.py  test_experiment_config.py  test_interpretability.py  test_lightning_components.py  test_limit_num_samples.py  test_lit_module_inference_helpers.py  test_mcp_runtime.py  test_mcp_server.py  test_optuna_toml_sweeps.py  test_precision_config.py  test_run_cli_config.py  test_runtime_checkpoint_inference.py  test_rvl_cdip_dataset.py  test_transforms.py
traenslenzor/: __main__.py  logger.py  logging_config.py  show-image.py
traenslenzor/app/: app.py  session_state_tools.py
traenslenzor/doc_class_detector/: mcp.py
traenslenzor/doc_classifier/: BATCH_SIZE_TUNING.md  CONFUSION_MATRIX_GUIDE.md  LIMIT_NUM_SAMPLES_GUIDE.md  PRECISION_GUIDE.md  PROGRESS_BAR_GUIDE.md  README.md  RECENT_UPDATES.md  TUNER_CONFIG_GUIDE.md  TUNER_GUIDE.md  TUNER_REFACTORING.md  __init__.py  export_demo_config.py  run.py
traenslenzor/doc_classifier/configs/: __init__.py  experiment_config.py  mcp_config.py  optuna_config.py  path_config.py  wandb_config.py
traenslenzor/doc_classifier/data_handling/: example_lit_datamodule_usage.py  huggingface_rvl_cdip_ds.py  transforms.py
traenslenzor/doc_classifier/interpretability/: __init__.py  attribution.py  attribution_runner.py
traenslenzor/doc_classifier/lightning/: __init__.py  finetune_callback.py  lit_datamodule.py  lit_module.py  lit_trainer_callbacks.py  lit_trainer_factory.py  lit_tuning.py
traenslenzor/doc_classifier/mcp/: README.md  __init__.py  get_schema.py  mcp_server.py  request.py  runtime.py  schemas.py
traenslenzor/doc_classifier/mcp_integration/: __init__.py  get_schema.py  mcp_server.py  request.py  runtime.py  schemas.py
traenslenzor/doc_classifier/models/: alexnet.py
traenslenzor/doc_classifier/utils/: __init__.py  base_config.py  console.py  optuna_optimizable.py  schemas.py
traenslenzor/doc_scanner/: __init__.py  backends.py  backtransform.py  cli.py  configs.py  mcp.py  runtime.py  superres.py  utils.py  visualize.py
traenslenzor/file_server/: client.py  server.py  session_state.py
traenslenzor/font_detector/: .gitattributes  README.md  __init__.py  font_name_detector.py  manual_test.py  mcp.py  server.py  test_contract_with_images.py  train_all.py  train_classifier.py
traenslenzor/font_detector/checkpoints/: training_summary.json
traenslenzor/font_detector/font_size_model/: __init__.py  data_gen.py  features.py  infer.py  model.py  train.py
traenslenzor/font_detector/scripts/: test_contract_with_images.py  test_font_detection.py  train_font_detection_model.py
traenslenzor/font_detector/tests/: __init__.py  test_contract_with_images.py  (+7 more)
traenslenzor/image_provider/: image_provider.py
traenslenzor/image_renderer/: README.md  TODO.md  image_renderer.py  image_rendering.py  inpainting.py  mask.py  mcp.py  mcp_server.py  onnx_inpainting.py  server.py  text_operations.py  utils.py
traenslenzor/image_utils/: image_utils.py
traenslenzor/layout_detector/: flatten_image.py  layout_detector.py  paddleocr.py  shim_langchain_backcomp.py
traenslenzor/streamlit/: app.py  prompt_presets.py  run.py  session_state.py  session_state_tools.py
traenslenzor/supervisor/: README.md  Report.md  config.py  llm.py  prompt.py  state.py  supervisor.py  system.tmpl  todo.md  tools.py  user_context.py
traenslenzor/text_extractor/: flatten_image.py  mcp.py  ocr.py  paddleocr.py  shim_langchain_backcomp.py  text_extractor.py
traenslenzor/text_optimizer/: mcp.py  text_optimizer.py
traenslenzor/translator/: mcp.py  translator.py
(+55 files in other folders)
