[project]
name = "traenslenzor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=23.2.1",
    "fastapi>=0.120.4",
    "fastmcp>=2.12.4",
    "httpx>=0.27.0",
    "langchain>=1.0.0",
    "langchain-mcp-adapters>=0.1.12",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.0",
    "tomlkit>=0.13.3",
    "types-aiofiles>=25.1.0.20251011",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250926",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
    "types-defusedxml>=0.7.0.20250822",
    "types-pexpect>=4.9.0.20250916",
    "types-psutil>=7.0.0.20251001",
    "types-pygments>=2.19.0.20250809",
    "types-pysocks>=1.7.1.20251001",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
]
classifier = [
    "albumentations>=2.0.8",
    "datasets>=4.4.1",                              # https://huggingface.co/datasets
    "devtools>=0.12.2",
    "numpy>=2.0.0",
    "opencv-python>=4.12.0.88",
    "optuna>=4.2.0",
    "optuna-integration[pytorch-lightning]>=4.5.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    # "pytorch-lightning>=2.5.6",
    "lightning>=2.5.6",
    "rich>=13.9.4",
    "torch>=2.5.0",
    "torchvision>=0.24.0",
    "torchmetrics>=1.6.0",
    "torchsummary>=1.5.1",
    "wandb>=0.22.3",
    "jaxtyping>=0.3.3",
    "typing-extensions>=4.15.0",
]
notebook = [
    "ipympl>=0.9.0",      # %matplotlib widget
    "jupyter>=1.0.0",
    "ipykernel>=7.1.0",
    "notebook>=7.0.0",
    "jupyterlab>=4.4.10",
]

[tool.setuptools.packages.find]
where   = ["."]
include = ["traenslenzor*"]
exclude = ["notebooks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["traenslenzor"]
addopts = "-q"
filterwarnings = [
    "ignore:The argument 'device' of Tensor\\.(pin_memory|is_pinned)\\(\\) is deprecated:DeprecationWarning",
]

[tool.ruff]
line-length    = 100
target-version = "py313"
extend-exclude = ["verify_todo_resolution.py", "test_transform_integration.py"]

    [tool.ruff.lint]
    extend-select = ["I"] # import sorting

[tool.mypy]
python_version       = "3.13"
warn_unused_ignores  = true
warn_redundant_casts = true
warn_return_any      = true
check_untyped_defs   = true
no_implicit_optional = true
pretty               = true
mypy_path            = ["traenslenzor"]
files                = ["traenslenzor", "tests"]

    [[tool.mypy.overrides]]
    module = [
        "langchain_mcp_adapters.*",
        "torchvision.*",
        "datasets.*",
        "albumentations.*",
        "torchsummary.*",
    ]
    ignore_missing_imports = true

        [tool.ruff.lint.per-file-ignores]
        "tests/*" = ["S101"]
